force-app/main/default/objects/Student__c/fields/Class_form__c.field-meta.xml
<CustomField>
    <fullName>Class_form__c</fullName>
    <formula>CASE(
  MOD(Admission_Date__c - DATE( 1900, 1, 8 ), 7 ),
  0, &quot;Monday&quot;,
  1, &quot;Tuesday&quot;,
  2, &quot;Wednesday&quot;,
  3, &quot;Thursday&quot;,
  4, &quot;Friday&quot;,
  5, &quot;Saturday&quot;, 
  &quot;Sunday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class form</label>
    <type>Text</type>
</CustomField>