force-app/main/default/objects/Student__c/fields/College_Name_form__c.field-meta.xml
<CustomField>
    <fullName>College_Name_form__c</fullName>
    <formula>Class__r.School__r.School_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College Name form</label>
    <type>Text</type>
</CustomField>