force-app/main/default/objects/Student__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <inlineHelpText>student date of birth</inlineHelpText>
    <label>Date Of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>