force-app/main/default/objects/Student__c/fields/PickClass__c.field-meta.xml
<CustomField>
    <fullName>PickClass__c</fullName>
    <label>PickClass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>B.tech</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>