force-app/main/default/objects/Student__c/fields/st_lang__c.field-meta.xml
<CustomField>
    <fullName>st_lang__c</fullName>
    <label>st_lang</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>