force-app/main/default/objects/Student__c/fields/st_month__c.field-meta.xml
<CustomField>
    <fullName>st_month__c</fullName>
    <label>st_month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
                <default>true</default>
                <label>January</label>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>