force-app/main/default/objects/Student__c/fields/STFee__c.field-meta.xml
<CustomField>
    <fullName>STFee__c</fullName>
    <label>STFee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>