force-app/main/default/objects/Student__c/fields/Student_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact__c</fullName>
    <inlineHelpText>shows contact no</inlineHelpText>
    <label>Student Contact</label>
    <type>Phone</type>
</CustomField>