force-app/main/default/objects/Student__c/validationRules/Check_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Length</fullName>
    <active>true</active>
    <description>length of contact should be 10</description>
    <errorConditionFormula>LEN(Student_Contact__c)!=10</errorConditionFormula>
    <errorDisplayField>Student_Contact__c</errorDisplayField>
    <errorMessage>enter only 10 digits</errorMessage>
</ValidationRule>