force-app/main/default/objects/Student__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <description>Require error</description>
    <errorConditionFormula>Student_Email__c == &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Student_Email__c</errorDisplayField>
    <errorMessage>This field necessary</errorMessage>
</ValidationRule>